<resources>
    <string name="app_name">BaseDatosP</string>
    <string name="report_planned_date">DD/MM/YY</string>
    <string name="Nombre">Nombre</string>
    <string name="Apellido">Apellido</string>
    <string name="Genero">Genero</string>
    <string name="Nacimiento">Fecha de Nacimiento</string>
    <string name="Guardar">Guardar</string>
    <string name="Alta">Alta Alumno</string>
    <string name="atxtAlta">Alta Alumnos</string>
    <string name="atxtAlumnos">Alumnos</string>
    <string name="atxtEditar">Editar Alumnos</string>
    <string name="atxtEliminar">Eliminar Alumnos</string>
    <string name="Fecha">Fecha</string>
    <string name="txtAlumnos">Alumos</string>
    <string name="txtDetalleAlumno">Detalle Alumno</string>
    <string name="txtEncuesta">Encuesta</string>
    <string name="NumeroEncu">NO. Encuesta</string>
    <string name="hintNombre">Nombre</string>
    <string name="hintApellidoPaterno">Apellido</string>
    <string name="Birthday">Fecha Cumpleaños</string>
    <string name="txtAlumno">Alumno</string>
    <string name="txtTituloMisEncuestas">Alumnos</string>
    <string name="Editar">Editar Alumno</string>
    <string name="btnEditar">Editar</string>
    <string name="hintCorreo">Correo</string>
    <string name="hintNacimiento">Fecha naci</string>
    <string name="hintTelefono">Telefono</string>
    <string name="txtEscuelaE">Escuela</string>
    <string name="txtUniversidad">Uni</string>
    <string name="txtPrepa">Prepa</string>
    <string name="txtSecundaria">sec</string>
    <string name="txtTituloNivelAcademicoAlta">nivel</string>
    <string name="txtCuentaEstudiante">ceunta</string>
    <string name="txtGeneroDetail">gener</string>
    <string name="hintNombreAlta">nombre</string>
    <string name="txtNumeroCuenta">num cuenta</string>
    <string name="txtEditarEstudiante">Editar Estuduiante</string>
    <string name="Inicio">Inicio</string>
</resources>
