<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/itmAlta"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/atxtAlta"
        app:showAsAction="never">

    </item>
    <item android:id="@+id/itmAlumnos"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/atxtAlumnos"
        app:showAsAction="never"
        tools:ignore="DuplicateIds">
    </item>

    <item android:id="@+id/itmEditar"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/atxtEditar"
        app:showAsAction="never"
        tools:ignore="DuplicateIds">
    </item>
    <item android:id="@+id/itmEliminar"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/atxtEliminar"
        app:showAsAction="never"
        tools:ignore="DuplicateIds">
    </item>

</menu>