<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalleActivity">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="128dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:layout_editor_absoluteX="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txvDetalleAlumno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txtDetalleAlumno"

                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txvAlumno"
                android:layout_width="110dp"
                android:layout_height="43dp"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="250dp"
                android:ems="8"
                android:text="@string/txtAlumno"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.568"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txvDetalleAlumno" />

            <TextView
                android:id="@+id/txvNumeroAlumno"
                android:layout_width="62dp"
                android:layout_height="41dp"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginTop="16dp"
                android:ems="8"
                android:hint="@string/NumeroEncu"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/txvAlumno"
                app:layout_constraintTop_toBottomOf="@+id/txvDetalleAlumno" />

            <TextView
                android:id="@+id/txvNombreDetalle"
                android:layout_width="300dp"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:ems="8"
                android:hint="@string/hintNombre"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txvAlumno" />

            <TextView
                android:id="@+id/txvApellidoDetalle"
                android:layout_width="300dp"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/hintApellidoPaterno"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txvNombreDetalle" />

            <TextView
                android:id="@+id/spnGeneroDetalle"
                android:layout_width="300dp"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/Genero"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txvBirthday"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/txvBirthday"
                android:layout_width="300dp"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/Birthday"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txvApellidoDetalle" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="110dp"
        android:layout_height="96dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/alumno" />

</androidx.constraintlayout.widget.ConstraintLayout>